# lawyerclaude

./: .dockerignore  .gitignore  BUILD_PLAN_DETAILED.md  CLAUDE.md  lawyerclaude-expansion-plan.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: admin.py  ai_doc.py  ai_outputs.py  analytics.py  appointments.py  assignments.py  assistant.py  audit.py  auth.py  billing.py  calendar.py  cases.py  contacts.py  correspondence.py  deadlines.py  dms.py  documents.py  documents_lifecycle.py  hearings.py  portal.py  references.py  reports.py  settings.py  signup.py  tasks.py  templates.py  users.py
backend/app/audit/: audit.py
backend/app/billing/: __init__.py  activation.py  paymob.py
backend/app/core/: config.py  db.py  errors.py  flags.py  operator.py  rbac.py  security.py  tenancy.py
backend/app/llm/: __init__.py  assistant.py  contract_analysis.py  generate.py  providers.py  risk_signals.py
backend/app/models/: __init__.py  admin.py  entities.py  expansion.py
backend/app/pipeline/: __init__.py  chunk.py  confidence.py  embed.py  normalize_ar.py  ocr_documentai.py  preprocess.py  run.py
backend/app/retriever/: __init__.py  references.py  retrieve.py  (+1 more)
backend/tests/: test_admin_auth.py  test_admin_billing.py  test_admin_isolation.py  test_admin_lifecycle.py  test_health.py  test_phase10_features.py  test_phase5_smoke.py  test_phase6_smoke.py  test_phase8_reports.py  test_phase9_assistant.py  test_pipeline.py  test_us1_smoke.py  test_wp_s3_billing.py
backend/workers/: pipeline_worker.py  scheduler_worker.py
(+183 files in other folders)
