[project]
name = "lawyer-office-backend"
version = "0.1.0"
description = "FastAPI AI engine for the AI-assisted lawyer office management system"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "email-validator>=2.0",
    "pydantic>=2",
    "pydantic-settings",
    "asyncpg",
    "pyjwt",
    "httpx",
    "python-multipart",
    "apscheduler",
    "google-auth[requests]",  # service-account auth for Document AI REST calls
    "litellm>=1.61",          # multi-provider LLM dispatch (spec 002 FR-141)
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "workers"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires a live Supabase instance (DATABASE_URL set)",
]
